# advent-of-code

./: .gitignore  .gitmodules  README.md  flake.nix
2022/haskell/: CHANGELOG.md  aoc2022.cabal
2022/haskell/app/: Main.hs
2022/inputs/: day-1.txt  day-2.txt  day-6.txt
2022/rust/: Cargo.toml
2022/rust/src/: day_1.rs  day_1_alternate.rs  day_2.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  main.rs
haskell/2022/: CHANGELOG.md  aoc2022.cabal
haskell/2022/app/: Main.hs
rust/: Cargo.toml  day.template.rs  rust-toolchain.toml  stat
rust/.cargo/: config.toml
rust/2022/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_2.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs
rust/cfg-proc/: Cargo.toml
rust/cfg-proc/src/: lib.rs
rust/src/: allocator.rs  const_displayable.rs  const_helpers.rs  displayable.rs  libc_write.rs  main.rs  utils.rs
rust/src/2021/: 1.rs  mod.rs
rust/src/2022/: 1.rs  10.rs  11.rs  12.rs  13.rs  2.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  mod.rs
rust/src/2023/: 1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  mod.rs
rust/src/2024/: 1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  mod.rs
rust/src/2025/: 1.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  mod.rs
rust/src/const_helpers/: array.rs
rust/src/utils/: array.rs  grid.rs
