[workspace]
members = ["cfg-proc"]

[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-proc = { path = "cfg-proc" }
libc = { version = "0.2.150", optional = true }

[lints.clippy]
pedantic = "deny"
get_unwrap = "deny"
str_to_string = "deny"
std_instead_of_core = "deny"

[profile.dev]
panic = "abort"

[profile.release]
# TODO: Use PGO
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
overflow-checks = false

[features]
default = ["2022", "2023"]

alloc = ["libc"]

2022 = [
  "2022-1",
  "2022-2",
  "2022-4",
  "2022-5",
  "2022-6",
  "2022-7",
  "2022-8",
  "2022-9",
  "2022-10",
  "2022-11",
  "2022-12",
  "2022-13",
]
2022-1 = []
2022-2 = []
2022-3 = ["alloc"]
2022-4 = ["alloc"]
2022-5 = ["alloc"]
2022-6 = ["alloc"]
2022-7 = ["alloc"]
2022-8 = ["alloc"]
2022-9 = ["alloc"]
2022-10 = ["alloc"]
2022-11 = ["alloc"]
2022-12 = ["alloc"]
2022-13 = ["alloc"]
2022-14 = ["alloc"]
2022-15 = ["alloc"]
2022-17 = ["alloc"]
2022-18 = ["alloc"]
2022-19 = ["alloc"]
2022-20 = ["alloc"]
2022-21 = ["alloc"]
2022-22 = ["alloc"]
2022-23 = ["alloc"]
2022-24 = ["alloc"]
2022-25 = ["alloc"]

2023 = ["2023-1", "2023-2"]
2023-1 = []
2023-2 = []
2023-3 = ["alloc"]
2023-4 = ["alloc"]
2023-5 = ["alloc"]
2023-6 = ["alloc"]
2023-7 = ["alloc"]
2023-8 = ["alloc"]
2023-9 = ["alloc"]
2023-10 = ["alloc"]
2023-11 = ["alloc"]
2023-12 = ["alloc"]
2023-13 = ["alloc"]
2023-14 = ["alloc"]
2023-15 = ["alloc"]
2023-17 = ["alloc"]
2023-18 = ["alloc"]
2023-19 = ["alloc"]
2023-20 = ["alloc"]
2023-21 = ["alloc"]
2023-22 = ["alloc"]
2023-23 = ["alloc"]
2023-24 = ["alloc"]
2023-25 = ["alloc"]
