[workspace]
members = ["cfg-proc"]

[package]
name = "advent-of-code"
version = "0.0.0"
edition = "2024"

[dependencies]
cfg-proc = { path = "cfg-proc" }

[lints.clippy]
# `#[apply(iter)]` triggers this for some reaso
semicolon_if_nothing_returned = { level = "allow", priority = 1 }
many_single_char_names = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
struct_field_names = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }

pedantic = "deny"
get_unwrap = "deny"
str_to_string = "deny"
std_instead_of_core = "deny"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(yolo)'] }

[profile.dev]

[profile.release]
# TODO: Use PGO
lto = "fat"
opt-level = 3
strip = "symbols"
overflow-checks = false

[features]
default = ["2021", "2022", "2023", "2024", "2025"]

const = []

2021 = ["2021-1"]
2021-1 = []
2021-2 = []
2021-3 = []
2021-4 = []
2021-5 = []
2021-6 = []
2021-7 = []
2021-8 = []
2021-9 = []
2021-10 = []
2021-11 = []
2021-12 = []
2021-13 = []
2021-14 = []
2021-15 = []
2021-16 = []
2021-17 = []
2021-18 = []
2021-19 = []
2021-20 = []
2021-21 = []
2021-22 = []
2021-23 = []
2021-24 = []
2021-25 = []

2022 = [
  "2022-1",
  "2022-2",
  "2022-4",
  "2022-5",
  "2022-6",
  "2022-7",
  "2022-8",
  "2022-9",
  "2022-10",
  "2022-11",
  "2022-12",
  "2022-13",
]
2022-1 = []
2022-2 = []
2022-3 = []
2022-4 = []
2022-5 = []
2022-6 = []
2022-7 = []
2022-8 = []
2022-9 = []
2022-10 = []
2022-11 = []
2022-12 = []
2022-13 = []
2022-14 = []
2022-15 = []
2022-16 = []
2022-17 = []
2022-18 = []
2022-19 = []
2022-20 = []
2022-21 = []
2022-22 = []
2022-23 = []
2022-24 = []
2022-25 = []

2023 = [
  "2023-1",
  "2023-2",
  "2023-3",
  "2023-4",
  "2023-5",
  "2023-6",
  "2023-7",
  "2023-8",
  "2023-9",
  "2023-10",
  "2023-11",
  "2023-12",
  "2023-13",
  "2023-14",
  "2023-15",
  "2023-16",
  "2023-17",
  # "2023-18",
  # "2023-19",
  # "2023-20",
  # "2023-21",
  # "2023-22",
  # "2023-23",
  # "2023-24",
  # "2023-25",
]
2023-1 = []
2023-2 = []
2023-3 = []
2023-4 = []
2023-5 = []
2023-6 = []
2023-7 = []
2023-8 = []
2023-9 = []
2023-10 = []
2023-11 = []
2023-12 = []
2023-13 = []
2023-14 = []
2023-15 = []
2023-16 = []
2023-17 = []
2023-18 = []
2023-19 = []
2023-20 = []
2023-21 = []
2023-22 = []
2023-23 = []
2023-24 = []
2023-25 = []

2024 = [
  "2024-1",
  "2024-2",
  "2024-3",
  "2024-4",
  "2024-5",
  "2024-6",
  "2024-7",
  "2024-8",
  "2024-9",
  "2024-10",
  "2024-11",
  "2024-12",
  "2024-13",
  "2024-14",
  "2024-15",
  "2024-16",
  # "2024-17",
  # "2024-18",
  # "2024-19",
  # "2024-20",
  # "2024-21",
  # "2024-22",
  # "2024-23",
  # "2024-24",
  # "2024-25",
]
2024-1 = []
2024-2 = []
2024-3 = []
2024-4 = []
2024-5 = []
2024-6 = []
2024-7 = []
2024-8 = []
2024-9 = []
2024-10 = []
2024-11 = []
2024-12 = []
2024-13 = []
2024-14 = []
2024-15 = []
2024-16 = []
2024-17 = []
2024-18 = []
2024-19 = []
2024-20 = []
2024-21 = []
2024-22 = []
2024-23 = []
2024-24 = []
2024-25 = []

2025 = ["2025-1", "2025-2", "2025-3"]
2025-1 = []
2025-2 = []
2025-3 = []
2025-4 = []
2025-5 = []
2025-6 = []
2025-7 = []
2025-8 = []
2025-9 = []
2025-10 = []
2025-11 = []
2025-12 = []
